--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,7 @@
 @import './variables.scss';
 
+@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,800");
+
 body, html {
   margin:0;
   padding: 0;
@@ -17,6 +19,7 @@ body, html {
 
 *{
   box-sizing: border-box;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 .countries-wrapper {
