Initial function working

--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -4,3 +4,5 @@ $light-mode-text: hsl(200, 15%, 8%);
 $dark-gray: hsl(0, 0%, 52%);
 $very-light-gray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
+
+$site-padding: 0 30px;
