--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -27,6 +27,11 @@ button{
   cursor: pointer;
 }
 
+ul{
+ list-style: none;
+ padding: 0;
+}
+
 .dark-mode{
   color: $white;
   background: $very-dark-blue;
