--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -5,4 +5,5 @@ $dark-gray: hsl(0, 0%, 52%);
 $very-light-gray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
 
-$site-padding: 0 30px;
+$site-padding: 0 60px;
+$shadow-light-mode: 0 0 10px #CCC;
