--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -6,4 +6,5 @@ $very-light-gray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
 
 $site-padding: 0 60px;
-$shadow-light-mode: 0 0 10px #CCC;
+$shadow-light-mode: 0px 0px 4px #AAA;
+$border-radius: 5px;
