--- a/src/components/filter-selector/style.scss
+++ b/src/components/filter-selector/style.scss
@@ -1,8 +1,5 @@
 @import '../../assets/css/variables.scss';
 
-$box-shadow: 0px 0px 10px #CCC;
-$border-radius: 5px;
-
 .search-filter{
   padding: $site-padding;
   width: 100%;
@@ -18,7 +15,7 @@ $border-radius: 5px;
   padding: 0 10px 0 50px;
   box-sizing: border-box;
   border: none;
-  box-shadow: $box-shadow;
+  box-shadow: $shadow-light-mode;
   border-radius:$border-radius;
 }
 
@@ -26,7 +23,7 @@ $border-radius: 5px;
   width: 200px;
   height: 55px;
   display: block;
-  box-shadow: $box-shadow;
+  box-shadow: $shadow-light-mode;
   overflow: hidden;
   position: relative;
   border-radius:$border-radius;
@@ -52,7 +49,7 @@ $border-radius: 5px;
     width: 100%;
     padding: 0 30px;
     background: #FFF;
-    box-shadow: $box-shadow;
+    box-shadow: $shadow-light-mode;
     border-radius: $border-radius
   }
   
