--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,6 +2,8 @@
 
 @import url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,800");
 
+/* NORMALIZE */
+
 body, html {
   margin:0;
   padding: 0;
@@ -32,6 +34,26 @@ ul{
  padding: 0;
 }
 
+strong{
+  font-weight: 800;
+}
+
+#app > div {
+  height: 100%;
+}
+
+::-webkit-scrollbar{
+  width: 7px;
+  background: #DDD;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #AAA;
+  border-radius: 5px;
+}
+
+/* HERE THE FUN STARTS */
+
 .dark-mode{
   color: $white;
   background: $very-dark-blue;
@@ -40,10 +62,6 @@ ul{
 .light-mode{
   color: $very-dark-blue;
   background: $very-light-gray;
-}
-
-.dark-mode, .light-mode{
-  height: 100vh;
 }
 
 .wrapper {
@@ -58,4 +76,28 @@ ul{
   grid-gap: 80px 0;
   justify-content: space-between;
   margin: 0 auto;
+}
+
+@include desktop-small {
+  .countries-wrapper {
+      grid-template-columns: repeat(3, calc(33% - 20px));
+      grid-gap: 40px 0;
+  }
+}
+
+@include tablet-small {
+  .countries-wrapper {
+      grid-template-columns: repeat(2, calc(50% - 20px));
+  }
+}
+
+@include smartphone {
+  .countries-wrapper {
+      grid-template-columns: initial;
+  }
+
+  .countries-wrapper {
+    padding: $site-padding-mobile;
+  }
+
 }
