--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -1,3 +1,4 @@
+//COLORS
 $dark-blue: hsl(209, 23%, 22%);
 $very-dark-blue: hsl(207, 26%, 17%);
 $light-mode-text: hsl(200, 15%, 8%);
@@ -5,6 +6,32 @@ $dark-gray: hsl(0, 0%, 52%);
 $very-light-gray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
 
+//COMMON CSS
 $site-padding: 0 60px;
 $shadow-light-mode: 0px 0px 4px #AAA;
+$shadow-dark-mode: 0px 0px 10px #111;
 $border-radius: 5px;
+
+
+// RESPONSIVE
+$site-padding-mobile: 0 30px;
+
+
+//MIXINS
+@mixin desktop-small {
+  @media screen and (max-width: 1019px) {
+    @content;
+  }
+}
+
+@mixin tablet-small {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin smartphone {
+  @media screen and (max-width: 549px) {
+    @content;
+  }
+}
