--- a/src/components/filter-selector/style.scss
+++ b/src/components/filter-selector/style.scss
@@ -1,6 +1,6 @@
 @import '../../assets/css/variables.scss';
 
-.search-filter{
+.search-filter {
   padding: $site-padding;
   width: 100%;
   height: 150px;
@@ -17,6 +17,7 @@
   border: none;
   box-shadow: $shadow-light-mode;
   border-radius:$border-radius;
+  font-size: 16px;
 }
 
 .search-region {
@@ -28,7 +29,18 @@
   position: relative;
   border-radius:$border-radius;
   cursor:pointer;
-  background: #FFF;
+  background: $white;
+  font-size: 14px;
+
+  &:before {
+    content: '\f078';
+    display: block;
+    font-size: 13px;
+    font-family: FontAwesome, sans-serif;
+    position: absolute;
+    top: 20px;
+    right: 15px
+  }
 
   
 .region-dropdown-title {
@@ -48,7 +60,7 @@
     top: 43px;
     width: 100%;
     padding: 0 30px;
-    background: #FFF;
+    background: $white;
     box-shadow: $shadow-light-mode;
     border-radius: $border-radius
   }
@@ -57,4 +69,57 @@
     margin: 10px 0
   }
   
+}
+
+.dark-mode {
+  #country-search,
+  .search-region,
+  .search-region .select-region{
+    background: $dark-blue;
+    color: $white;
+    box-shadow: $shadow-dark-mode;
+
+    &::placeholder{
+      color: $white;
+    }
+  }
+}
+
+@include tablet-small {
+  #country-search {
+    width: 55%;
+  }
+}
+
+@include smartphone {
+
+  .search-filter {
+    flex-direction: column;
+    height: 130px;
+  }
+
+  #country-search {
+    width: 100%;
+  }
+
+  .search-filter {
+    padding: $site-padding-mobile;
+    margin: 30px 0;
+    align-items: flex-start;
+  }
+
+  #country-search,
+  .search-region,
+  .search-region .region-dropdown-title {
+      height: 50px;
+  }
+
+  .search-region .region-dropdown-title {
+      line-height: 50px;
+  }
+
+  .search-region:before {
+      top: 17px;
+  }
+
 }
