--- a/src/components/filter-selector/style.scss
+++ b/src/components/filter-selector/style.scss
@@ -20,6 +20,18 @@
   font-size: 16px;
 }
 
+.search-wrapper:before {
+  content: "\f002";
+  position: absolute;
+  top: 19px;
+  left: 15px;
+  font-family: FontAwesome, sans-serif;
+}
+
+.search-wrapper {
+  position: relative;
+}
+
 .search-region {
   width: 200px;
   height: 55px;
