Fix Search wrapper

--- a/src/components/filter-selector/style.scss
+++ b/src/components/filter-selector/style.scss
@@ -105,6 +105,10 @@
 
 @include smartphone {
 
+  .search-wrapper{
+    width: 100%;
+  }
+
   .search-filter {
     flex-direction: column;
     height: 130px;
