--- a/src/components/filter-selector/style.scss
+++ b/src/components/filter-selector/style.scss
@@ -71,15 +71,21 @@
     position: absolute;
     top: 43px;
     width: 100%;
-    padding: 0 30px;
     background: $white;
     box-shadow: $shadow-light-mode;
     border-radius: $border-radius
   }
   
   .select-region li{
-    margin: 10px 0
-  }
+    display: block;
+    width: 100%;
+    padding: 10px 30px;
+
+    &:hover{
+      background: #555;
+      color: $white;
+    }
+}
   
 }
 
